--- a/app/globals.css
+++ b/app/globals.css
@@ -1017,3 +1017,49 @@ input[disabled] {
 .danger {
   color: var(--danger);
 }
+
+/* progress */
+progress {
+  display: block; /* default: inline-block */
+  width: 300px;
+  padding: 4px;
+  border: 0 none;
+  background: var(--lighter);
+  border-radius: 14px;
+  transition: 0.3s ease;
+}
+
+.progress-input {
+  flex-direction: row;
+  align-items: center;
+  grid-gap: 1rem;
+}
+
+.progress-text {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--faded);
+  width: 50px;
+  text-align: end;
+}
+
+/* webkit */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  progress {
+    height: 25px;
+  }
+}
+progress::-webkit-progress-bar {
+  background: transparent;
+}
+progress::-webkit-progress-value {
+  border-radius: 12px;
+  background: var(--dark);
+  box-shadow: inset 0 -2px 4px rgba(0, 0, 0, 0.4),
+    0 2px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+progress[value]::-webkit-progress-value {
+  transition: width 0.5s ease-in-out;
+  position: relative;
+}
