--- a/styles/section.css
+++ b/styles/section.css
@@ -63,6 +63,10 @@
   text-transform: capitalize;
   font-size: 16px;
   font-weight: 500;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
 
 .section-card-title {
